# Kinect-Detection

./: CMakeLists.txt  KinectTest.sln  README.md
KinectTest/: KinectTest.vcxproj  KinectTest.vcxproj.filters  colorMap-example.cpp  depthMap-example.cpp  depthMap.cpp  kinect-filtering-dynamic.cpp  kinect-filtering.cpp  opencv.cpp
KinectTest/Example/: KinectConnectionTest.cpp  colorMap-example.cpp  depthMap-example.cpp  opencv-example.cpp
examples/: depth-test.cpp
kinect-linux/: kinect-filtering-dynamic.cpp
